# transdoc

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  mkdocs-deploy.yml  mkdocs-dryrun.yml  mkdocs.yml  publish.yml  python-app.yml
docs/: .pages  README.md  builtins.md  cli_use.md  handlers.md  library_use.md  recipes.md
docs/api/: rule_context.md
docs/development/: contributing.md  handlers.md
docs/handlers/: .pages  index.md  plaintext.md  python.md
plugins/transdoc-hatch/: README.md  main.py  pyproject.toml
plugins/transdoc-python/: pyproject.toml
plugins/transdoc-python/tests/: python_test.py
plugins/transdoc-python/transdoc_python/: __init__.py  __visitor.py
python/: __transformer.py
stubs/: README.md
stubs/colored/: README.md  cprint.pyi  library.pyi
tests/: __init__.py  conftest.py  file_test.py  source_pos_test.py  string_test.py  transform_test.py  transformer_test.py  tree_test.py
tests/data/: __init__.py  example.txt  invalid_call.txt  module.py
tests/data/directory/: LICENSE.txt  README.md  skip.txt
tests/handlers/: __init__.py  example_handlers.py  get_handlers_test.py  plaintext_test.py
tests/rules/: __init__.py  attributes_test.py  file_contents_test.py  markdown_docs_link_test.py
transdoc/: __collect_rules.py  __consts.py  __init__.py  __main__.py  __processor.py  __rule.py  __transform_file.py  __transform_tree.py  __transformer.py  errors.py  source_pos.py  util.py
transdoc/__cli/: __init__.py  mutex.py  util.py
transdoc/handlers/: __init__.py  api.py  plaintext.py
transdoc/rules/: __attributes.py  __file_contents.py  __init__.py  __markdown_docs_link.py
