[project]
name = "transdoc"
description = "Transform your documentation by embedding results from Python function calls"
version = "0.2.5"
requires-python = ">= 3.11"
authors = [{ name = "Maddy Guthridge", email = "hello@maddyguthridge.com" }]
readme = "README.md"
license = { file = "LICENSE" }

keywords = ["documentation", "source", "transform", "parse", "pre-processor"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Pre-processors",
    "Typing :: Typed",
]
dependencies = ["click (>=8.1.7, < 9)"]

[project.urls]
repository = "https://github.com/MaddyGuthridge/transdoc"
# documentation = "https://maddyguthridge.github.io/transdoc/"

[tool.poetry]
include = ["py.typed"]

[tool.poetry.scripts]
transdoc = "transdoc.__main__:cli"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.4,<9.0.0"
mypy = "^1.8.0"
coverage = "^7.4.0"
autopep8 = "^2.0.4"
jestspectation = "^1.3.0"
ruff = "^0.9.2"

[tool.ruff]
line-length = 79

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "return NotImplemented",
    "@overload",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
