[project]
name = "transdoc"
description = "Transform your documentation by embedding results from Python function calls"
version = "1.1.1"
requires-python = ">= 3.11"
authors = [{ name = "Maddy Guthridge", email = "hello@maddyguthridge.com" }]
readme = "README.md"
license = { text = "MIT" }

keywords = ["documentation", "source", "transform", "parse", "pre-processor"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Pre-processors",
    "Typing :: Typed",
]
dependencies = ["click (>=8.1.7, <9)", "colored (>=2.2.5,<3.0.0)"]
[project.optional-dependencies]
python = ["transdoc-python (>=0.1.0, <1)"]

[project.urls]
homepage = "https://maddyguthridge.github.io/transdoc"
repository = "https://github.com/MaddyGuthridge/transdoc"
documentation = "https://maddyguthridge.github.io/transdoc"
"Bug Tracker" = "https://github.com/MaddyGuthridge/transdoc/issues"

[tool.poetry]
include = ["py.typed"]

[tool.poetry.scripts]
transdoc = "transdoc.__main__:cli"

[tool.poetry.group.ci.dependencies]
pytest = ">=7.4.4,<9.0.0"
mypy = "^1.8.0"
coverage = "^7.8.0"
autopep8 = "^2.3.2"
jestspectation = "^1.3.0"
ruff = "^0.11.7"
pillow = "^11.1.0"
pytest-mock = "^3.14.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.50"
mkdocstrings = { version = "^0.27.0", extras = ["python"] }
mkdocs-awesome-pages-plugin = "^2.10.1"


[tool.poetry.group.python]
optional = true
[tool.poetry.group.python.dependencies]
transdoc-python = "^0.1.4"

[tool.mypy]
check_untyped_defs = true
files = ["transdoc", "tests"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    # Common bugs
    "E", # PyCodeStyle errors
    "W", # PyCodeStyle warning
    "F", # Pyflakes
    "B", # Bugbear
    # "S", # Bandit (security mistakes)

    # Syntax
    "C4", # Comprehension expressions
    "COM", # Trailing commas
    "UP", # Upgrade due to newer Python version
    "TRY", # Exception-handling

    # CodeCommon code simplifications
    "SIM",

    # Imports
    "I",   # isort
    "ICN", # Import conventions
    "TID", # More good import practices

    # Naming conventions
    "N",

    # Comments and documentation
    "TD", # Be diligent with TODO comments
    "D", # Enforce documentation style
]

ignore = [
    # Docstring writing style
    # I actually agree with most of these for functions, but they are also
    # applied to module and class docstrings, which is pretty annoying.
    "D4",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "return NotImplemented",
    "raise NotImplementedError",
    "@overload",
    'if __name__ == "__main__":',
    "if __name__ == '__main__':",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
