[project]
name = "transdoc"
version = "1.2.0"
description = "Transform your documentation by embedding results from Python function calls"
authors = [{ name = "Maddy Guthridge", email = "hello@maddyguthridge.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["documentation", "source", "transform", "parse", "pre-processor"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Pre-processors",
    "Typing :: Typed",
]
dependencies = [
    "click (>=8.1.7, <9)",
    "colored (>=2.2.5,<3.0.0)",
    "typing-extensions (>=4.13.2,<5.0.0)",
]

[project.optional-dependencies]
python = ["transdoc-python>=0.1.4"]

[project.urls]
homepage = "https://maddyguthridge.github.io/transdoc"
repository = "https://github.com/MaddyGuthridge/transdoc"
documentation = "https://maddyguthridge.github.io/transdoc"
"Bug Tracker" = "https://github.com/MaddyGuthridge/transdoc/issues"

[project.scripts]
transdoc = "transdoc.__main__:cli"

[build-system]
requires = ["uv_build>=0.7.20,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "transdoc"
module-root = ""

[dependency-groups]
dev = [
  {include-group = "ci"},
  {include-group = "docs"}
]
ci = [
    "pytest>=7.4.4,<10.0.0",
    "mypy>=1.19.0",
    "coverage>=7.12.0",
    "autopep8>=2.3.2",
    "jestspectation>=1.3.0",
    "ruff>=0.14.3",
    "pillow>=11.3.0",
    "pytest-mock>=3.15.1",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=0.30.0",
    "mkdocs-awesome-pages-plugin>=2.10.1",
]

[tool.mypy]
check_untyped_defs = true
files = ["transdoc", "tests"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    # Common bugs
    "E", # PyCodeStyle errors
    "W", # PyCodeStyle warning
    "F", # Pyflakes
    "B", # Bugbear
    # "S", # Bandit (security mistakes)

    # Syntax
    "C4",  # Comprehension expressions
    "COM", # Trailing commas
    "UP",  # Upgrade due to newer Python version
    "TRY", # Exception-handling

    # CodeCommon code simplifications
    "SIM",

    # Imports
    "I",   # isort
    "ICN", # Import conventions
    "TID", # More good import practices

    # Naming conventions
    "N",

    # Comments and documentation
    "D",  # Enforce documentation style
]

ignore = [
    # Docstring writing style
    # I actually agree with most of these for functions, but they are also
    # applied to module and class docstrings, which is pretty annoying.
    "D4",
    # D203 is incompatible with D211
    "D203",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]

"*_test.py" = [
    # Don't check docstrings in test suites, since tests are often
    # self-documenting.
    "D",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "return NotImplemented",
    "raise NotImplementedError",
    "@overload",
    'if __name__ == "__main__":',
    "if __name__ == '__main__':",
]
